--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <div id="search-suggestion">
                             <div id = "suggestion-header">
                                 <p class="f-16 col-6" id = "suggestion-header-texts">تخصص های پربازدید</p>
-                                <a href="" class = "f-16 col-6" id = "suggestion-header-texts">مشاهده همه تخصص ها</a>
+                                <a href="" class = "f-16 col-6 link" id = "suggestion-header-texts">مشاهده همه تخصص ها</a>
                             </div>
                             <ul>
                                 <li><a href="">فوق تخصص من</a></li>
@@ -80,7 +80,56 @@
 
     
     <section id="specializations">
-
+        <div class = "content">
+            <div class = "row bottom-offset">
+                <p class = "col-6">بهترین تخصص های درمانکده</p>
+                <a href="" class = "link col-6 ltr"><i class="fas fa-arrow-left" style="padding-right: 5px;"></i> مشاهده همه</a>
+            </div>
+            <div class = "row space-even-row f-16">
+                <div class = "spec-card">
+                    <div class = "img-holder" style="background-color: #E8C9FD;">
+                        <img src="/images/bones.png " alt="" class = "card-img">
+                    </div>
+                    <p class = "card-title">اورتوپدی</p>
+                </div>
+                <div class = "spec-card">
+                    <div class = "img-holder" style="background-color: #FCBABA;">
+                        <img src="/images/heart.png " alt="" class = "card-img">
+                    </div>
+                    <p class = "card-title">اورولوژی</p>
+                </div>
+                <div class = "spec-card">
+                    <div class = "img-holder" style="background-color: #B3E8CA;">
+                        <img src="/images/hair.png " alt="" class = "card-img">
+                    </div>
+                    <p class = "card-title">پوست و مو</p>
+                </div>
+                <div class = "spec-card">
+                    <div class = "img-holder" style="background-color: #ABC2D8;">
+                        <img src="/images/feetus.png " alt="" class = "card-img">
+                    </div>
+                    <p class = "card-title">زنان و زایمان</p>
+                </div>
+                <div class = "spec-card">
+                    <div class = "img-holder" style="background-color: #FBCBEE;">
+                        <img src="/images/kidney.png " alt="" class = "card-img">
+                    </div>
+                    <p class = "card-title">داخلی</p>
+                </div>
+                <div class = "spec-card">
+                    <div class = "img-holder" style="background-color: #C5E1FB;">
+                        <img src="/images/ear.png " alt="" class = "card-img">
+                    </div>
+                    <p class = "card-title">گوش، حلق و بینی</p>
+                </div>
+                <div class = "spec-card">
+                    <div class = "img-holder" style="background-color: #FDCDB0;">
+                        <img src="/images/brain.png " alt="" class = "card-img">
+                    </div>
+                    <p class = "card-title">مغز و اعصاب</p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section id="comments">
