--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="fontawesome-free-5.15.1-web/css/all.css" />
-    <!-- TODO: use official font -->
     <link rel = "stylesheet" href="fonts/fonts.css" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Darmankade</title>
@@ -179,6 +178,43 @@
     </section>
 
     <section id="download">
+        <div class = "content">
+            <div class = "row">
+                <div class = "col-5">
+                    <img class = "download-img" src="/images/signup.png" alt="">
+                    <div class = "download-stores">
+                        <a href="">
+                            <img src="images/play store.png" alt="">
+                        </a>
+                        <a href="">
+                            <img src="images/apple.png" alt="">
+                        </a>
+                        <a href="">
+                            <img src="images/bazaar.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class = "col-7">
+                    <div class = "col-2 auto-margin download-app">
+                        <p class = "fade-black f-bold f-18">دانلود اپلیکیشن درمانکده</p>
+
+                        <p class = "fade-gray">با اپلیکیشن درمانکده با پزشکان و روانشناسان آنلاین مشاوره کنید یا برای ویزیت حضوری آنلاین نوبت بگیرید.</p>
+                        <p class = "padding-top-offset fade-black f-bold">برای دریافت لینک دانلود، شماره موبایل خود را وارد کنید.</p>
+                        <div class = "app-form">
+                            <input class ="col-6" type="text" placeholder = "مانند صفر نه صد و">
+                            <div class="hover-box">
+                                <a class="hover-btn" href="#">
+                                    <span class="hover-btn-descr f-16">ارسال لینک</span>
+                                    <div class="hover-btn-icon">
+                                        <i class="fas fa-mobile-alt"></i>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer>
