--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="fontawesome-free-5.15.1-web/css/all.css" />
     <link rel = "stylesheet" href="fonts/fonts.css" />
+    <link href='https://cdn.fontcdn.ir/Font/Persian/Vazir/Vazir.css' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Darmankade</title>
 </head>
@@ -146,7 +147,47 @@
     </section>
 
     <section id="comments">
-
+        <div class = "content">
+            <div class = "row">
+                <div class = "col-6">
+                    <div class ="top-offset-large left-margin">
+                        <p class = "f-bold f-18 fade-black bottom-offset-more">نظرات و روند درمانی بیماران</p>
+                        <p class = "fade-gray f-16">شما می توانید تجربه مراجعه کاربران دیگر به پزشکان را بخوانید و از علت مراجعه سایر بیماران و روند درمانی آن ها آگاهی یابید.</p>
+                    </div>
+                </div>
+                <div class = "col-6">
+                    <div class = "quote-box">
+                        <img src="images/quote.png" class = "quote-img" alt="">
+                        <p>
+                            خانم دکتر رستمی واقعا صبور ودلسوزبیماراشون هستن بنده چندساله تحت نظر ایشون هستم
+                        </p>
+                        <div class = "doctor-info">
+                            <div class = "row padding-top-offset">
+                                <div class = " col-6 flex">
+                                    <img src="images/doctor.jpg" alt="">
+                                    <div class = " padding-right padding-top-offset">
+                                        <p class = "fade-black f-bold">دکتر زهره رستمی</p>
+                                        <p class = "fade-gray f-16">فوق تخصص کلیه(نفرولوژی)</p>
+                                    </div>
+                                </div>
+                                <div class = "col-6">
+                                    <div class = "right-margin-large button-base margin-top-offset">
+                                        <a href="">
+                                            <p class = "f-16">مشاهده نظرات دیگر</p>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class = "commenter">
+                            <p>
+                                نظر عیسی
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section id="services">
@@ -201,7 +242,7 @@
                         <p class = "fade-gray">با اپلیکیشن درمانکده با پزشکان و روانشناسان آنلاین مشاوره کنید یا برای ویزیت حضوری آنلاین نوبت بگیرید.</p>
                         <p class = "padding-top-offset fade-black f-bold">برای دریافت لینک دانلود، شماره موبایل خود را وارد کنید.</p>
                         <div class = "app-form">
-                            <input class ="col-6" type="text" placeholder = "مانند صفر نه صد و">
+                            <input class ="col-6" type="text" placeholder = "مانند *********۰۹">
                             <div class="hover-box">
                                 <a class="hover-btn" href="#">
                                     <span class="hover-btn-descr f-16">ارسال لینک</span>
