finished medical spec page added bootstrap fixed conflicting classes improved general styles

--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <title>ورود</title>
 </head>
 <body>
-    <div class = "row">
+    <div class = "row-flex">
         <div class = "col-33 blue-bg max-height center-center">
             <div class = "col-80 text-center">
                 <img id = "login-logo" class = "bottom-offset" src="images/logo_invert.svg" alt="">
@@ -22,9 +22,9 @@
         <div class = "col-66 white-alt-bg max-height center-center">
             <div class ="col-50 text-center">
                 <p class = "f-bold fade-black bottom-offset-lot">برای ورود شماره همراه خود را وارد کنید.</p>
-                <input type="text" class = "row bottom-offset-more" name="phone" placeholder="مانند *********۰۹">
+                <input type="text" class = "row-flex bottom-offset-more" name="phone" placeholder="مانند *********۰۹">
                 <p id = "input-head" class = "fade-black">شماره همراه</p>
-                <button class = "row btn-base btn-orange bottom-offset">
+                <button class = "row-flex btn-base btn-orange bottom-offset">
                     <p class = "wide text-center f-18">
                         دریافت کد تایید<i class="fas fa-arrow-left icon-line-align"></i>
                     </p>
