--- a/index.html
+++ b/index.html
@@ -16,19 +16,22 @@
     <header class = "content">
         <nav class="container">
             <div class= "row-flex">
-                <div class = "logo">
-                    <img class = "logo-img" src="images/logo.svg" alt="darmankade logo">
+                <div class="logo">
+                    <a href="index.html">
+                        <img class="logo-img" src="images/logo.svg" alt="darmankade logo">
+                    </a>
                 </div>
-                <div class = "navmenu">
+                <div class="navmenu">
                     <ul>
-                        <li class = "nav-item">
-                            <a href = "#home"><i class="fa fa-bars"></i> لیست تخصص ها</i></a>
+                        <li class="nav-item">
+                            <a href="spec.html"><i class="fa fa-bars"></i> لیست تخصص ها</i></a>
                         </li>
-                        <li class = "nav-item"><a href = "#home"><i class="fa fa-wifi"></i> مشاوره آنلاین</a></li>
-                        <li class = "nav-item"><a href = "#home"><i class="fa fa-book"></i> مجله پزشکی</a></li>
-                        <li class = "nav-item"><a href = "#home"><i class="fa fa-user-md"></i> عضویت پزشکان</a></li>
-                        <li class = "nav-item"><a href = "#home"><i class="fa fa-cube"></i> کرونا سازمانی</a></li>
-                        <li class="nav-item left-nav rounded"><a href = "login.html">ورود <i class="fa fa-sign-in-alt fa-flip-horizontal"></i></a></li>
+                        <li class="nav-item"><a href="#home"><i class="fa fa-wifi"></i> مشاوره آنلاین</a></li>
+                        <li class="nav-item"><a href="#home"><i class="fa fa-book"></i> مجله پزشکی</a></li>
+                        <li class="nav-item"><a href="#home"><i class="fa fa-user-md"></i> عضویت پزشکان</a></li>
+                        <li class="nav-item"><a href="#home"><i class="fa fa-cube"></i> کرونا سازمانی</a></li>
+                        <li class="nav-item left-nav rounded"><a href="login.html">ورود <i
+                                    class="fa fa-sign-in-alt fa-flip-horizontal"></i></a></li>
                     </ul>
                 </div>
                 
