--- a/spec.html
+++ b/spec.html
@@ -18,15 +18,17 @@
 
 <body>
     <header class="content">
-        <nav class="container">
+        <nav class="container bottom-offset-more">
             <div class="row-flex">
                 <div class="logo">
-                    <img class="logo-img" src="images/logo.svg" alt="darmankade logo">
+                    <a href="index.html">
+                        <img class="logo-img" src="images/logo.svg" alt="darmankade logo">
+                    </a>
                 </div>
                 <div class="navmenu">
                     <ul>
                         <li class="nav-item">
-                            <a href="#home"><i class="fa fa-bars"></i> لیست تخصص ها</i></a>
+                            <a href="spec.html"><i class="fa fa-bars"></i> لیست تخصص ها</i></a>
                         </li>
                         <li class="nav-item"><a href="#home"><i class="fa fa-wifi"></i> مشاوره آنلاین</a></li>
                         <li class="nav-item"><a href="#home"><i class="fa fa-book"></i> مجله پزشکی</a></li>
@@ -89,7 +91,7 @@
                                             </a>
                                         </li>
                                         <li class="bottom-offset">
-                                            <a class="link dashed-hover no-hover" href="">
+                                            <a class="link dashed-hover no-hover" href="doctors.html">
                                                 استروتاکسی و فانکشنال مغز و اعصاب
                                             </a>
                                         </li>
@@ -250,7 +252,10 @@
                                 <div class="row-flex bottom-offset-more">
                                     <img class="rounded fourside-padding-5 left-offset-more"
                                         src="images/spec/brain.svg">
-                                    <h5 class="vertical-center">مغز و اعصاب</h5>
+                                        <a href="doctors.html" class = "no-decoration vertical-center" style="color: black">
+                                            <h5>مغز و اعصاب</h5>
+
+                                        </a>
                                 </div>
                                 <p class="f-16 card-text">
                                     سیستم عصبی انسان به دو دسته‌ی کلی اعصاب مرکزی (مغز و نخاع) و اعصاب محیطی ... </p>
@@ -262,7 +267,7 @@
                                         <p class = " f-16"> + ده دکتر</p>
                                     </div>
                                     <div class="col-50">
-                                        <a href="#"
+                                        <a href="doctors.html"
                                             class="btn btn-primary-orange w-100 fourside-padding-5 padding-btn-top-bottom">مشاهده
                                             <i class="fas fa-arrow-left icon-line-align"></i></a>
                                     </div>
