:sparkles: finished personal doctors page added comments section added doctor available days added doctor card finished phase 2

--- a/doctors.html
+++ b/doctors.html
@@ -62,7 +62,7 @@
         <div class="row">
             <section class="col-3 no-right-padding bottom-offset-lot">
                 <div class= "bottom-offset">
-                    <img class = "w-100" src="/images/corona-banner.png" alt="">
+                    <img class = "w-100" src="images/corona-banner.png" alt="">
                 </div>
                 <aside class="asidec fixed-top">
                     <div class="card row-card-height fourside-padding-5 bottom-offset">
@@ -108,7 +108,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="card row-card-height fourside-padding-5 bottom-offset">
+                    <div class="card row-card-height fourside-padding-5">
                         <div class = "row-flex">
                             <p class="col-80 no-margin-bottom">نمایش پزشکان با مشاوره آنلاین</p>
                             <p class="col-20 ltr no-margin-bottom">
@@ -145,7 +145,7 @@
                             <div class="row">
                                 <div class="row col-7">
                                     <div class="col-4">
-                                        <img class = "round-pic fourside-padding-5" src="/images/doctor1.jpg" alt="">
+                                        <img class = "round-pic fourside-padding-5" src="images/doctor1.jpg" alt="">
                                     </div>
                                     <div class="col-8">
                                         <div class = "padding-top-10p">
@@ -208,7 +208,7 @@
                             <div class="row">
                                 <div class="row col-7">
                                     <div class="col-4">
-                                        <img class = "round-pic fourside-padding-5" src="/images/doctor2.png" alt="">
+                                        <img class = "round-pic fourside-padding-5" src="images/doctor2.png" alt="">
                                     </div>
                                     <div class="col-8">
                                         <div class = "padding-top-10p">
@@ -271,7 +271,7 @@
                             <div class="row">
                                 <div class="row col-7">
                                     <div class="col-4">
-                                        <img class = "round-pic fourside-padding-5" src="/images/doctor3.png" alt="">
+                                        <img class = "round-pic fourside-padding-5" src="images/doctor3.png" alt="">
                                     </div>
                                     <div class="col-8">
                                         <div class = "padding-top-10p">
@@ -472,7 +472,7 @@
         <div class = "content">
             <div class = "row-flex">
                 <div class = "col-41">
-                    <img class = "download-img" src="/images/signup.png" alt="">
+                    <img class = "download-img" src="images/signup.png" alt="">
                     <div class = "download-stores">
                         <a href="">
                             <img src="images/play store.png" alt="">
@@ -549,12 +549,12 @@
                     <div class="row-flex e-namad bottom-offset-more">
                         <div class="card">
                             <a href="">
-                                <img src="/images/enamad.png" alt="">
+                                <img src="images/enamad.png" alt="">
                             </a>
                         </div>
                         <div class="card">
                             <a href="">
-                                <img src="/images/samandehi.png" alt="">
+                                <img src="images/samandehi.png" alt="">
                             </a>
                         </div>
                     </div>
