--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <a href="" class = "no-decoration black-text">
                     <div class = "spec-card">
                         <div class = "img-holder" style="background-color: #E8C9FD;">
-                            <img src="/images/bones.png " alt="" class = "card-img">
+                            <img src="images/bones.png " alt="" class = "card-img">
                         </div>
                         <p class = "card-title">اورتوپدی</p>
                     </div>
@@ -103,7 +103,7 @@
                 <a href="" class = "no-decoration black-text">
                     <div class = "spec-card">
                         <div class = "img-holder" style="background-color: #FCBABA;">
-                            <img src="/images/heart.png " alt="" class = "card-img">
+                            <img src="images/heart.png " alt="" class = "card-img">
                         </div>
                         <p class = "card-title">اورولوژی</p>
                     </div>
@@ -111,7 +111,7 @@
                 <a href="" class = "no-decoration black-text">
                     <div class = "spec-card">
                         <div class = "img-holder" style="background-color: #B3E8CA;">
-                            <img src="/images/hair.png " alt="" class = "card-img">
+                            <img src="images/hair.png " alt="" class = "card-img">
                         </div>
                         <p class = "card-title">پوست و مو</p>
                     </div>
@@ -119,7 +119,7 @@
                 <a href="" class = "no-decoration black-text">
                     <div class = "spec-card">
                         <div class = "img-holder" style="background-color: #ABC2D8;">
-                            <img src="/images/feetus.png " alt="" class = "card-img">
+                            <img src="images/feetus.png " alt="" class = "card-img">
                         </div>
                         <p class = "card-title">زنان و زایمان</p>
                     </div>
@@ -127,7 +127,7 @@
                 <a href="" class = "no-decoration black-text">
                     <div class = "spec-card">
                         <div class = "img-holder" style="background-color: #FBCBEE;">
-                            <img src="/images/kidney.png " alt="" class = "card-img">
+                            <img src="images/kidney.png " alt="" class = "card-img">
                         </div>
                         <p class = "card-title">داخلی</p>
                     </div>
@@ -135,7 +135,7 @@
                 <a href="" class = "no-decoration black-text">
                     <div class = "spec-card">
                         <div class = "img-holder" style="background-color: #C5E1FB;">
-                            <img src="/images/ear.png " alt="" class = "card-img">
+                            <img src="images/ear.png " alt="" class = "card-img">
                         </div>
                         <p class = "card-title">گوش، حلق و بینی</p>
                     </div>
@@ -143,7 +143,7 @@
                 <a href="" class = "no-decoration black-text">
                     <div class = "spec-card">
                         <div class = "img-holder" style="background-color: #FDCDB0;">
-                            <img src="/images/brain.png " alt="" class = "card-img">
+                            <img src="images/brain.png " alt="" class = "card-img">
                         </div>
                         <p class = "card-title">مغز و اعصاب</p>
                     </div>
@@ -228,7 +228,7 @@
         <div class = "content">
             <div class = "row-flex">
                 <div class = "col-41">
-                    <img class = "download-img" src="/images/signup.png" alt="">
+                    <img class = "download-img" src="images/signup.png" alt="">
                     <div class = "download-stores">
                         <a href="">
                             <img src="images/play store.png" alt="">
@@ -349,12 +349,12 @@
             <div class = "row-flex e-namad">
                 <div class = "card">
                     <a href="">
-                        <img src="/images/enamad.png" alt="">
+                        <img src="images/enamad.png" alt="">
                     </a>
                 </div>    
                 <div class= "card">
                     <a href="">
-                        <img src="/images/samandehi.png" alt="">
+                        <img src="images/samandehi.png" alt="">
                     </a>
                 </div>
             </div>
