--- a/spec.html
+++ b/spec.html
@@ -655,12 +655,12 @@
                     <div class="row-flex e-namad bottom-offset-more">
                         <div class="card">
                             <a href="">
-                                <img src="/images/enamad.png" alt="">
+                                <img src="images/enamad.png" alt="">
                             </a>
                         </div>
                         <div class="card">
                             <a href="">
-                                <img src="/images/samandehi.png" alt="">
+                                <img src="images/samandehi.png" alt="">
                             </a>
                         </div>
                     </div>
