added comments reorganized styles

--- a/doctors/291.html
+++ b/doctors/291.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <!-- Header -->
     <header class="content">
         <nav class="container">
             <div class="row-flex">
@@ -41,6 +42,7 @@
             </div>
         </nav>
 
+        <!-- Top of the page -->
         <div class="row-flex top-offset-more">
             <a href="../index.html">
                 <span class="f-bold blue-text left-padding">
@@ -62,7 +64,7 @@
 
     </header>
 
-
+    <!-- Top of the Page -->
     <div class="content">
         <class class="row">
             <section id="doctor-card" class="col-4 no-right-padding bottom-offset-lot">
@@ -221,6 +223,7 @@
                     </div>
                 </div>
 
+                <!-- Overal comments -->
                 <div class="card top-offset bottom-offset">
                     <div class="row padding-top-10p padding-bottom-10p">
                         <div class="col-2">
@@ -262,6 +265,7 @@
 
                 </div>
 
+                <!-- Matab information -->
                 <div class="card bottom-offset">
                     <div class="row-flex tabs">
                         <div class="tab selected-tab fourside-padding-15">
@@ -297,6 +301,7 @@
                 </div>
 
 
+                <!-- Users Comments -->
                 <div class="card bottom-offset-lot fade-black">
                     <div class="row-flex bottom-offset fourside-padding-5 light-grey-bg no-bottom-border-radius">
                         <div class="col-1 text-center top-offset-less">
@@ -699,7 +704,7 @@
     </div>
 
 
-
+    <!-- Services -->
     <section id="services">
         <div class="my-container corona-bg padding-top-offset padding-bottom-offset">
             <p class="text-center wide white-text f-24 f-bold bottom-offset-more">خدمات ویژه درمانکده برای کووید</p>
@@ -730,6 +735,7 @@
         </div>
     </section>
 
+    <!-- Application Download -->
     <section id="download">
         <div class="content">
             <div class="row-flex">
@@ -772,6 +778,7 @@
         </div>
     </section>
 
+    <!-- Footer -->
     <footer>
         <div class="footer-container">
             <div class="row-flex bottom-offset top-offset-more">
