--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>درمانکده - صفحه اصلی</title>
 </head>
 <body>
+    <!-- HEADER -->
     <header class = "content">
         <nav class="container">
             <div class= "row-flex">
@@ -36,6 +37,7 @@
         </nav>
     </header>
 
+    <!-- SEARCH BAR -->
     <section id="searchBar">
             <div class = "content searchbar-bg">
                 <div class = "row-flex title">
@@ -81,7 +83,7 @@
     </section>
 
 
-    
+    <!-- Best Specializations -->
     <section id="specializations">
         <div class = "content">
             <div class = "row-flex bottom-offset">
@@ -149,6 +151,7 @@
         </div>
     </section>
 
+    <!-- Best Comments -->
     <section id="comments">
         <div class = "content">
             <div class = "row-flex">
@@ -193,6 +196,7 @@
         </div>
     </section>
 
+    <!-- Covid Services -->
     <section id="services">
         <div class = "container corona-bg padding-top-offset padding-bottom-offset">
             <p class = "text-center wide white-text f-24 f-bold bottom-offset-more">خدمات ویژه درمانکده برای کووید</p>
@@ -221,6 +225,7 @@
         </div>
     </section>
 
+    <!-- Application Download -->
     <section id="download">
         <div class = "content">
             <div class = "row-flex">
@@ -261,6 +266,7 @@
         </div>
     </section>
 
+    <!-- Footer -->
     <footer>
         <div class= "footer-container">
             <div class = "row-flex bottom-offset">
@@ -358,6 +364,7 @@
         </div>
     </footer>
 
+    <!-- Copyright -->
     <section id="copyright">
         <div class = "footer-container row-flex f-16">
             <p class = "f-12 col-50"> (آیرانیک)تمامی حقوق این سایت برای درمانکده محفوظ است</p>
