--- a/medical-specialties.html
+++ b/medical-specialties.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <!-- Header -->
     <header class="content">
         <nav class="container bottom-offset-more">
             <div class="row-flex">
@@ -41,6 +42,7 @@
             </div>
         </nav>
 
+        <!-- Slidshow  -->
         <div class="row bottom-offset-more">
             <img src="images/slider.png" class="w-100" alt="">
         </div>
@@ -48,6 +50,7 @@
 
     <div class="content">
         <div class="row">
+            <!-- Sidebar -->
             <section id="spec-sidebar" class="col-3">
                 <aside class="asidec fixed-top">
                     <div class="card">
@@ -188,6 +191,8 @@
                     </div>
                 </aside>
             </section>
+
+            <!-- Specialties list -->
             <section id="spec-cards" class="col-9">
                 <div class="row bottom-offset-more">
                     <div class="col-md">
@@ -612,7 +617,7 @@
     </div>
 
 
-
+    <!-- Footer -->
     <footer>
         <div class="footer-container">
             <div class="row-flex bottom-offset top-offset-more">
