--- a/specialties/neurologist.html
+++ b/specialties/neurologist.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <!-- Header -->
     <header class="content">
         <nav class="container">
             <div class="row-flex">
@@ -41,6 +42,7 @@
             </div>
         </nav>
 
+        <!-- Navbar -->
         <div class="row-flex top-offset-more">
             <a href="../index.html">
                 <span class = "f-bold blue-text left-padding">
@@ -59,6 +61,7 @@
 
     <div class="content">
         <div class="row">
+            <!-- Sidebar -->
             <section class="col-3 no-right-padding bottom-offset-more">
                 <div class= "bottom-offset">
                     <img class = "w-100" src="../images/corona-banner.png" alt="">
@@ -120,6 +123,8 @@
                     </div>
                 </aside>
             </section>
+
+            <!-- Doctors List -->
             <section class="col-9 no-left-padding">
                 <div class="row bottom-offset-more">
                     <div class="row no-left-padding">
@@ -196,7 +201,7 @@
                                             </div>
                                         </dov>
                                     </div>
-                                    <p class = "text-center green-text">اولین نوبت خالی دوشنبه ۲۴ آذر</p>
+                                    <p class = "text-center dark-green">اولین نوبت خالی دوشنبه ۲۴ آذر</p>
                                 </div>
                             </div>
                         </div>
@@ -259,7 +264,7 @@
                                             </div>
                                         </dov>
                                     </div>
-                                    <p class = "text-center green-text">اولین نوبت خالی چهارشنبه ۲۶ آذر</p>
+                                    <p class = "text-center dark-green">اولین نوبت خالی چهارشنبه ۲۶ آذر</p>
                                 </div>
                             </div>
                         </div>
@@ -322,7 +327,7 @@
                                             </div>
                                         </dov>
                                     </div>
-                                    <p class = "text-center green-text">اولین نوبت خالی دوشنبه ۲۴ آذر</p>
+                                    <p class = "text-center dark-green">اولین نوبت خالی دوشنبه ۲۴ آذر</p>
                                 </div>
                             </div>
                         </div>
@@ -333,6 +338,7 @@
         </div>
     </div>
 
+    <!-- Specialty Description and questions -->
     <section id="more-info">
         <div class="content bottom-offset-more">
             <h4 class ="bottom-offset-more">هر آنچه که باید از
@@ -439,6 +445,7 @@
         </div>
     </section>
 
+    <!-- Services -->
     <section id="services">
         <div class = "my-container corona-bg padding-top-offset padding-bottom-offset">
             <p class = "text-center wide white-text f-24 f-bold bottom-offset-more">خدمات ویژه درمانکده برای کووید</p>
@@ -467,6 +474,7 @@
         </div>
     </section>
 
+    <!-- Application Download -->
     <section id="download">
         <div class = "content">
             <div class = "row-flex">
@@ -507,6 +515,7 @@
         </div>
     </section>
 
+    <!-- Footer -->
     <footer>
         <div class="footer-container">
             <div class="row-flex bottom-offset top-offset-more">
