:sparkles: added dynamic functionality added vue dependencies added slider to spec page added functionality to some filters changed files structures finished phase 3

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
         <div class = "content">
             <div class = "row-flex bottom-offset">
                 <p class = "col-50">بهترین تخصص های درمانکده</p>
-                <a href="" class = "link col-50 ltr"><i class="fas fa-arrow-left" style="padding-right: 5px;"></i> مشاهده همه</a>
+                <a href="medical-specialties.html" class = "link col-50 ltr"><i class="fas fa-arrow-left" style="padding-right: 5px;"></i> مشاهده همه</a>
             </div>
             <div class = "row-flex space-even-row f-16">
-                <a href="" class = "no-decoration black-text">
+                <a href="doctors-list.html" class = "no-decoration black-text">
                     <div class = "spec-card">
                         <div class = "img-holder" style="background-color: #E8C9FD;">
                             <img src="images/bones.png " alt="" class = "card-img">
@@ -99,7 +99,7 @@
                         <p class = "card-title">اورتوپدی</p>
                     </div>
                 </a>
-                <a href="" class = "no-decoration black-text">
+                <a href="doctors-list.html" class = "no-decoration black-text">
                     <div class = "spec-card">
                         <div class = "img-holder" style="background-color: #FCBABA;">
                             <img src="images/heart.png " alt="" class = "card-img">
@@ -107,7 +107,7 @@
                         <p class = "card-title">اورولوژی</p>
                     </div>
                 </a>
-                <a href="" class = "no-decoration black-text">
+                <a href="doctors-list.html" class = "no-decoration black-text">
                     <div class = "spec-card">
                         <div class = "img-holder" style="background-color: #B3E8CA;">
                             <img src="images/hair.png " alt="" class = "card-img">
@@ -115,7 +115,7 @@
                         <p class = "card-title">پوست و مو</p>
                     </div>
                 </a>
-                <a href="" class = "no-decoration black-text">
+                <a href="doctors-list.html" class = "no-decoration black-text">
                     <div class = "spec-card">
                         <div class = "img-holder" style="background-color: #ABC2D8;">
                             <img src="images/feetus.png " alt="" class = "card-img">
@@ -123,7 +123,7 @@
                         <p class = "card-title">زنان و زایمان</p>
                     </div>
                 </a>
-                <a href="" class = "no-decoration black-text">
+                <a href="doctors-list.html" class = "no-decoration black-text">
                     <div class = "spec-card">
                         <div class = "img-holder" style="background-color: #FBCBEE;">
                             <img src="images/kidney.png " alt="" class = "card-img">
@@ -131,7 +131,7 @@
                         <p class = "card-title">داخلی</p>
                     </div>
                 </a>
-                <a href="" class = "no-decoration black-text">
+                <a href="doctors-list.html" class = "no-decoration black-text">
                     <div class = "spec-card">
                         <div class = "img-holder" style="background-color: #C5E1FB;">
                             <img src="images/ear.png " alt="" class = "card-img">
@@ -139,7 +139,7 @@
                         <p class = "card-title">گوش، حلق و بینی</p>
                     </div>
                 </a>
-                <a href="specialties/neurologist.html" class = "no-decoration black-text">
+                <a href="doctors-list.html" class = "no-decoration black-text">
                     <div class = "spec-card">
                         <div class = "img-holder" style="background-color: #FDCDB0;">
                             <img src="images/brain.png " alt="" class = "card-img">
