:bug: Fix side search bar
some disorientation was found during a showcase
probably happened after adding vue

--- a/doctors-list.html
+++ b/doctors-list.html
@@ -74,7 +74,7 @@
                         <div id="sidebar-header" class = "bottom-offset-more">
                             <p class = "padding-bottom-15 no-margin-bottom">جستجو در نتایج</p>
                         </div>
-                        <div class = "right-padding left-padding bottom-offset">
+                        <div class = "bottom-offset">
                             <div class="fourside-padding-5 icon-input row-flex bottom-offset">
                                 <i class="fas fade-gray fa-search f-20 vertical-center"></i>
                                 <input class = "right-padding" type="text" placeholder="جستجو کنید">
