--- a/medical-specialties.html
+++ b/medical-specialties.html
@@ -82,8 +82,8 @@
                                     الفبا)</p>
                             </div>
                         </div>
-                        <div class = "right-padding left-padding">
-                            <div class="fourside-padding-5 icon-input row-flex bottom-offset-more">
+                        <div class = "left-padding right-padding">
+                            <div class="fourside-padding-5 icon-input flex bottom-offset-more">
                                 <i class="fas blue-text fa-search f-20 vertical-center right-padding"></i>
                                 <input class="right-padding" type="text" placeholder="جستجو کنید">
                             </div>
