--- a/doctors-personal-page.html
+++ b/doctors-personal-page.html
@@ -727,7 +727,7 @@
                 <div class="col-50 sides-margin-med">
                     <img class="service-img bottom-offset-more" src="images/services1.png" alt="">
                     <p class="text-center white-text f-bold bottom-offset">تست PCR و آنتی بادی در محل</p>
-                    <p class="white-text bottom-offset"> اگر در شهرهای تهران، مشهد، اصفهان، کرج، شیراز و اهواز هستید،
+                    <p class="white-text bottom-offset"> اگر در شهرهای تهران، مشهد، اصفهان، کرج هستید،
                         می‌توانید بدون مراجعه به آزمایشگاه و در محل مدنظر خود آزمایش کرونا بدهید.</p>
                     <button class="services-btn bottom-offset top-offset">
                         <a href="">
