:bug: Fix big footer logo
It seems some dead spirits are lurking beneath my code

--- a/index.html
+++ b/index.html
@@ -270,8 +270,8 @@
     <footer>
         <div class= "footer-container">
             <div class = "row-flex bottom-offset">
-                <img class = "wide bottom-offset" src="images/logo_invert.svg" alt="logo">
-                <p class = "text-center wide">درمانکده، ارائه دهنده خدمات آنلاین سلامت
+                <img class = "auto-margin" src="images/logo_invert.svg" alt="logo">
+                <p class = "top-offset text-center wide">درمانکده، ارائه دهنده خدمات آنلاین سلامت
                     <br>(نوبت گیری اینترنتی، مشاوره آنلاین، آزمایش در محل و ...)
                 </p>
             </div>
