--- a/public_html/index.html
+++ b/public_html/index.html
@@ -44,8 +44,8 @@
                     <p class = "wide white-text f-32">درمانکده - مشاوره آنلاین و حضوری</p>
                 </div>
                 <div class = "row-flex">
-                    <form class = "search-box" action="http://www.foo.com" method="GET">
-                        <input name = "q" type="text" class = "search-input" placeholder="نام پزشک، تخصص یا محله مورد نظر را تایپ کنید">
+                    <form class = "search-box">
+                        <input name = "id" type="text" class = "search-input" placeholder="نام پزشک، تخصص یا محله مورد نظر را تایپ کنید">
                         <div id="search-suggestion">
                             <div id = "suggestion-header">
                                 <p class="f-16 col-50" id = "suggestion-header-texts">تخصص های پربازدید</p>
