Add profile edit

--- a/public_html/login.html
+++ b/public_html/login.html
@@ -21,8 +21,8 @@
         <div class = "col-66 white-alt-bg max-height center-center">
             <form class ="col-50 text-center">
                 <p class = "f-bold fade-black bottom-offset-lot">برای ورود اطلاعات خود را وارد کنید.</p>
-                <input name= "username" type="text" class = "row-flex bottom-offset-more" name="phone" placeholder="نام کاربری" required>
-                <input name = "password" type="password" class = "row-flex bottom-offset-more" name="phone" placeholder="رمز عبور" required minlength="8">
+                <input name= "username" type="text" class = "row-flex bottom-offset-more" placeholder="نام کاربری" required>
+                <input name = "password" type="password" class = "row-flex bottom-offset-more" placeholder="رمز عبور" required minlength="8">
                 
                 <button type="submit" class = "row-flex btn-base btn-orange bottom-offset">
                     <p class = "wide text-center f-18">
