--- a/public_html/patient-profile.html
+++ b/public_html/patient-profile.html
@@ -1,5 +1,10 @@
 <h1>WELCOME</h1>
 <h1>{{ .Username }}</h1>
-<p>{{ .Phone }}</p>
-<p>{{ .Firstname }}</p>
-<p>{{ .Lastname }}</p>
+<form action="http://localhost:8000/api/edit">
+    <input type="text" name = "p"     placeholder={{ .Phone }} >
+    <input type="text" name = "f" placeholder={{ .Firstname }}>
+    <input type="text" name = "l"  placeholder={{ .Lastname }}>
+    <p>confirm username</p>
+    <input type="text" placeholder={{ .Username }} name = "u" >
+    <button type="submit">CHANGE</button>
+</form>
