Add spec api and search

--- a/public_html/doctor-register.html
+++ b/public_html/doctor-register.html
@@ -29,8 +29,12 @@
                 <input type="password" class = "row-flex bottom-offset-more" name="password" placeholder="رمز عبور" required minlength="8">
                 <select name="spec">
                     <option value="1">مغز و اعصاب</option>
-                    <option value="2">مغز</option>
-                    <option value="3">اعصاب</option>
+                    <option value="2">گوش، حلق و بینی</option>
+                    <option value="3">داخلی</option>
+                    <option value="4">زنان و زایمان</option>
+                    <option value="5">پوست و مو</option>
+                    <option value="6">اورولوژی</option>
+                    <option value="7">ارتوپدی</option>
                   </select>
 
                 <fieldset class = "doctors-days-form">
