--- a/public_html/doctors-personal-page.html
+++ b/public_html/doctors-personal-page.html
@@ -52,7 +52,7 @@
                     درمانکده <i class="fas fa-arrow-left icon-line-align"></i>
                 </span>
             </a>
-            <a href="#">
+            <a id = "doctor-spec-link" href="#">
                 <p id = "doctor-spec" class="f-bold blue-text left-padding">
                     متخصص مغز و اعصاب 
                 </p>
@@ -89,7 +89,7 @@
                             <div class="col-8 text-center white-text">
                                 <img class="row doctor-profile-pic round-pic auto-margin" v-bind:src="doctors.avatar" alt="">
                                 <p class="f-bold top-offset f-18 bottom-offset">{{doctors.name}}</p>
-                                <p class="bottom-offset">{{doctors.spec}}</p>
+                                <p class="bottom-offset">{{doctors.specid}}</p>
                                 <p class="f-16 bottom-offset-more">شماره نظام پزشکی: {{doctors.number}}</p>
                             </div>
                             <div class="col-2">
@@ -952,6 +952,7 @@
 
             read(id) {
                 var s = document.getElementById("doctor-spec");
+                var slink = document.getElementById("doctor-spec-link");
                 var n = document.getElementById("doctor-name");
 
                 // var url = 'https://intense-ravine-40625.herokuapp.com/doctors/' + id;
@@ -960,7 +961,9 @@
                 axios.get(url).then(
                 response => {
                 this.doctors = response.data;
-                s.innerHTML = response.data.spec;
+                s.innerHTML = response.data.specid;
+                slink.setAttribute("href", "doctors-list.html?spec=3")
+                document.title = "صفحه دکتر" + response.data.name;
                 n.innerHTML = response.data.name;
                 }
             ).catch((err) => console.error(err));
