--- a/public_html/index.html
+++ b/public_html/index.html
@@ -26,7 +26,7 @@
                         </li>
                         <li class="nav-item"><a href="#home"><i class="fa fa-wifi"></i> مشاوره آنلاین</a></li>
                         <li class="nav-item"><a href="#home"><i class="fa fa-book"></i> مجله پزشکی</a></li>
-                        <li class="nav-item"><a href="#home"><i class="fa fa-user-md"></i> عضویت پزشکان</a></li>
+                        <li class="nav-item"><a href="doctor-register.html"><i class="fa fa-user-md"></i> عضویت پزشکان</a></li>
                         <li class="nav-item"><a href="#home"><i class="fa fa-cube"></i> کرونا سازمانی</a></li>
                         <li class="nav-item left-nav rounded"><a href="login.html">ورود <i
                                     class="fa fa-sign-in-alt fa-flip-horizontal"></i></a></li>
@@ -91,7 +91,7 @@
                 <a href="medical-specialties.html" class = "link col-50 ltr"><i class="fas fa-arrow-left" style="padding-right: 5px;"></i> مشاهده همه</a>
             </div>
             <div class = "row-flex space-even-row f-16">
-                <a href="doctors-list.html" class = "no-decoration black-text">
+                <a href="doctors-list.html?spec=7" class = "no-decoration black-text">
                     <div class = "spec-card">
                         <div class = "img-holder" style="background-color: #E8C9FD;">
                             <img src="images/bones.png " alt="" class = "card-img">
@@ -99,7 +99,7 @@
                         <p class = "card-title">اورتوپدی</p>
                     </div>
                 </a>
-                <a href="doctors-list.html" class = "no-decoration black-text">
+                <a href="doctors-list.html?spec=6" class = "no-decoration black-text">
                     <div class = "spec-card">
                         <div class = "img-holder" style="background-color: #FCBABA;">
                             <img src="images/heart.png " alt="" class = "card-img">
@@ -107,7 +107,7 @@
                         <p class = "card-title">اورولوژی</p>
                     </div>
                 </a>
-                <a href="doctors-list.html" class = "no-decoration black-text">
+                <a href="doctors-list.html?spec=5" class = "no-decoration black-text">
                     <div class = "spec-card">
                         <div class = "img-holder" style="background-color: #B3E8CA;">
                             <img src="images/hair.png " alt="" class = "card-img">
@@ -115,7 +115,7 @@
                         <p class = "card-title">پوست و مو</p>
                     </div>
                 </a>
-                <a href="doctors-list.html" class = "no-decoration black-text">
+                <a href="doctors-list.html?spec=4" class = "no-decoration black-text">
                     <div class = "spec-card">
                         <div class = "img-holder" style="background-color: #ABC2D8;">
                             <img src="images/feetus.png " alt="" class = "card-img">
@@ -123,7 +123,7 @@
                         <p class = "card-title">زنان و زایمان</p>
                     </div>
                 </a>
-                <a href="doctors-list.html" class = "no-decoration black-text">
+                <a href="doctors-list.html?spec=3" class = "no-decoration black-text">
                     <div class = "spec-card">
                         <div class = "img-holder" style="background-color: #FBCBEE;">
                             <img src="images/kidney.png " alt="" class = "card-img">
@@ -131,7 +131,7 @@
                         <p class = "card-title">داخلی</p>
                     </div>
                 </a>
-                <a href="doctors-list.html" class = "no-decoration black-text">
+                <a href="doctors-list.html?spec=2" class = "no-decoration black-text">
                     <div class = "spec-card">
                         <div class = "img-holder" style="background-color: #C5E1FB;">
                             <img src="images/ear.png " alt="" class = "card-img">
@@ -139,7 +139,7 @@
                         <p class = "card-title">گوش، حلق و بینی</p>
                     </div>
                 </a>
-                <a href="doctors-list.html" class = "no-decoration black-text">
+                <a href="doctors-list.html?spec=1" class = "no-decoration black-text">
                     <div class = "spec-card">
                         <div class = "img-holder" style="background-color: #FDCDB0;">
                             <img src="images/brain.png " alt="" class = "card-img">
