--- a/public_html/login.html
+++ b/public_html/login.html
@@ -19,12 +19,12 @@
             </div>
         </div>
         <div class = "col-66 white-alt-bg max-height center-center">
-            <form class ="col-50 text-center">
+            <form class ="col-50 text-center" action="/login" method="POST">
                 <p class = "f-bold fade-black bottom-offset-lot">برای ورود اطلاعات خود را وارد کنید.</p>
-                <input name= "username" type="text" class = "row-flex bottom-offset-more" placeholder="نام کاربری" required>
-                <input name = "password" type="password" class = "row-flex bottom-offset-more" placeholder="رمز عبور" required minlength="8">
+                <input id = "username" name= "username" type="text" class = "row-flex bottom-offset-more" placeholder="نام کاربری" required>
+                <input id = "password" name = "password" type="password" class = "row-flex bottom-offset-more" placeholder="رمز عبور" required minlength="8">
                 
-                <button type="submit" class = "row-flex btn-base btn-orange bottom-offset">
+                <button id="login-btn" type="submit" class = "row-flex btn-base btn-orange bottom-offset">
                     <p class = "wide text-center f-18">
                         ورود<i class="fas fa-arrow-left icon-line-align"></i>
                     </p>
@@ -44,5 +44,5 @@
                 </a>
             </form>
         </div>
-    </div>
+    </div>    
 </body>
